--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "forsider",
+  "homepage": "https://forsider.sildesalat.no",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "cat CNAME > ./dist/CNAME && gh-pages -d dist",
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -16,6 +19,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "gh-pages": "^5.0.0",
     "sass": "^1.59.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
